added a very useful dev script for testing the docker build. added some colors to wsplus web socket script. tweaked the docker webpage splash. change doc build default to use a single boot to reduce time it takes to build site.